2.deployment-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-deploy
  namespace: delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: member-app
  template:
    metadata:
      labels:
        app: member-app
    spec:
      containers:
      - name: member
        image: choheewon00/front_site:1.1
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "500m"
