4.ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: delivery
  annotations: #리소스에 추가 정보 및 지시사항을 부여하고자 할 때 사용
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # nginx Controller에서 지금 코드 처리
  rules: #라우팅 규칙 설정
  #- host: localhost # 실제 DNS 이름과 매칭되는 트래픽 라우팅 조건
  - http:
      paths:
      - path: / # path : /member 경로로 들어오는 값 처리
        pathType: Prefix # Exact(정확이 같은 경로만 처리 )
        #prefix : 위의 path의 /member 경로로 시작하는 모든 값은 아래 svc로 연결
        # /member, /member/info 등 접두사만 매칭되면 뒤쪽 경로들은 모드 member-svc연결
        # 매칭된 prefix(/member) 제거후 나머지만 pod에게 전달( / , /info ...등 )
        backend:
          service:
            name: member-svc   # ClusterIP Service
            port:
              number: 10000
